# ipdnsd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
config/: ipdnsd.example.toml
scripts/: install-service.ps1  install-service.sh  install.ps1  install.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/daemon/: mod.rs  service.rs
src/dns/: godaddy.rs  mod.rs  provider.rs
src/ip/: external.rs  internal.rs  mod.rs
src/secrets/: keyring_store.rs  mod.rs
